--- a/src/ProjectCSS/reactTable.css
+++ b/src/ProjectCSS/reactTable.css
@@ -28,3 +28,25 @@ table {
     background-color: blue;
     color: white;
   }
+
+
+
+.pagination {
+  margin-left: 10px;
+  font-family: arial;
+  
+  font-size: 16px;
+  margin: 25px;
+  width: 1500px;
+  height: 50px;
+
+  /* Center child horizontally*/
+  display: inline-flex;
+  justify-content: center;
+}
+
+  .pagination_button {
+     
+     height: 30px;
+     margin-left: 10px;
+  }
